--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@iconify/json": "^2.1.135",
     "@intlify/nuxt3": "^0.2.4",
     "@nuxt/content": "2.2.2",
+    "@nuxt/image-edge": "1.0.0-27840416.dc1ed65",
     "@nuxt/test-utils-edge": "3.0.0-rc.13-27772354.a0a59e2",
     "@nuxtjs/eslint-config": "^12.0.0",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
@@ -67,5 +68,8 @@
     "**/*.{js,ts,vue,html}": [
       "pnpm lintfix"
     ]
+  },
+  "dependencies": {
+    "vue3-carousel": "^0.2.9"
   }
 }
